test/analyze/type_check/match/divergence.exp
Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:46:13-48:5
 46 | /     | "c" -> if (true) {
    | |              ^^^^^^^^^^^
 47 | |       return;
    | | ^^^^^^^^^^^^^
 48 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:49:13-52:5
 49 | /     | "d" -> if (true) {
    | |              ^^^^^^^^^^^
 50 | |       return;
    | | ^^^^^^^^^^^^^
 51 | |     } else {
    | | ^^^^^^^^^^^^
 52 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:53:11-56:5
 53 | /     | _ -> if (true) {
    | |            ^^^^^^^^^^^
 54 | |     } else {
    | | ^^^^^^^^^^^^
 55 | |       return;
    | | ^^^^^^^^^^^^^
 56 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:78:15-81:5
 78 | /     | false -> {
    | |                ^
 79 | |       1;
    | | ^^^^^^^^
 80 | |       2;
    | | ^^^^^^^^
 81 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:113:15-121:5
 113 | /     | false -> match (true) {
     | |                ^^^^^^^^^^^^^^
 114 | |       | true -> match (true) {
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 115 | |         | true -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 120 | |       }
     | | ^^^^^^^
 121 | |     }
     | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:126:15-134:5
 126 | /     | false -> match (true) {
     | |                ^^^^^^^^^^^^^^
 127 | |       | true -> match (true) {
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 128 | |         | true -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 133 | |       | false -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^
 134 | |     }
     | \ ^^^^^^